--- a/scripts/second_part_c14bazAAR.Rmd
+++ b/scripts/second_part_c14bazAAR.Rmd
@@ -153,7 +153,7 @@ Unfortunately the result of calibration is per definition not a simple number bu
 ```{r}
 calibrated <- calibrate(
   dates_head,
-  choices = c("probdist", "sigmarange"),
+  choices = c("calprobdistr", "calrange"),
   sigma = 2
 )
 
