altered line 347 in second part to reflect current parameterisation in c14bazAAR

--- a/scripts/second_part_c14bazAAR.Rmd
+++ b/scripts/second_part_c14bazAAR.Rmd
@@ -344,7 +344,7 @@ colnames(bawue_dates) <- gsub("data.", "", colnames(bawue_dates))
 
 bawue_calibrated <- bawue_dates %>%
   as.c14_date_list() %>%
-  calibrate(choices = "probdist")
+  calibrate(choices = "calprobdistr")
 
 bawue_calibrated %>%
   unnest() %>%
